Fix overflow in high score list

--- a/src/styles/highScores.scss
+++ b/src/styles/highScores.scss
@@ -21,7 +21,15 @@
        display: flex;
        flex-direction: column;
        align-items: flex-start;
-       text-overflow: ellipsis;
+
+       max-width: 70%;
+
+       h3{
+           width: 100%;
+           text-align: left; 
+           overflow: hidden;
+           text-overflow: ellipsis;
+       }
    }
     
    @media (max-width: 600px) {
